Fixes "twitter and general button don't align"

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -387,10 +387,6 @@ input[type="search"]::-webkit-search-decoration {
 	display: inline-block;
 }
 
-.widget.tweet, .widget.button {
-	display: inline-block;
-}
-
 // Wedge end
 .widget.companyname,
 .widget.feature h2 span,
